light-manager/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: light-manager
  labels:
    app.kubernetes.io/name: light-manager
    app.kubernetes.io/part-of: light-manager
