light-manager/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: light-manager
  namespace: light-manager
  labels:
    app.kubernetes.io/name: light-manager
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: light-manager
    app.kubernetes.io/component: app
  ports:
  - name: http
    port: 80
    targetPort: http
